refactor(test): verify jdbc agent template