@@ -1,8 +1,9 @@
 package com.dbx.agent.template;
 
+import com.dbx.agent.test.TestSupport;
 import com.dbx.agent.ExecuteQueryOptions;
 import com.dbx.agent.test.JdbcAgentFake;
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -10,10 +11,13 @@ class TemplateAgentTest {
     @Test
     void executeQueryUsesStatementExecute() {
         TemplateAgent agent = new TemplateAgent();
-        JdbcAgentFake.setPrivateConnection(agent, JdbcAgentFake.connection());
+        TestSupport.setPrivateConnection(agent, JdbcAgentFake.connection());
 
         agent.executeQuery("SHOW TABLES", null, new ExecuteQueryOptions());
 
-        Assertions.assertEquals(Collections.singletonList("execute"), JdbcAgentFake.calls);
+        Assertions.assertEquals(
+            List.of("setMaxRows:10001", "execute"),
+            JdbcAgentFake.calls
+        );
     }
 }
